   - Bugfix: Respect "use_max_mail" option (maildir)
   - Bugfix: Reading message body (file)
   - Bugfix: Don't read whole body (maildir)
   - Bugfix: Check pointers in callbacks (in "src/gui.cc")
   - Bugfix: 64bit problem (debian bug #301853); note: The same problem is
        still present multiple times in the code; added this to TODO file;
        thanks to David Mosberger for reporting this bug
   - Added David Mosberger to contributors
   - Bugfix: Corrected string size types in "src/decoding.*", "src/mailbox.*"
        "src/apop.*", "src/imap4.*", "src/maildir.*", "src/biff.*",
        "src/gtk_image_animation.*" and "src/support.*" (64bit systems)
   - Checked files for incorrect string size type without problems:
        "src/pop.*", "src/maildir.*", "src/file.*", "src/gnubiff.*" and
        "src/pop3.*"
   - Bugfix: Crash in image selecting dialogs (thanks to David Mosberger for
        reporting this bug)
   - Feature: More information in unknown_internal_error() provided
   - Documentation of Mailbox::parse()
   - Bugfix: Throw exception if login line cannot be created (apop)
   - Bugfix: "Quit" menu item (gtk applet)
   - Bugfix: Respect "use_max_mail" option (mh)
   - Bugfix: Test pointers in callback functions ("src/gtk_image_animation.cc")

Version 2.1.2		2005-03-26 17:28
 * Robert Sowada
   - Changed version to 2.1.2, updated spec file
   - Various small changes
   - Updated po files, German translation
   - Cleanup: Complete documentation of functions in "src/options.cc"
   - Bugfix: Allow storing of strings that contain spaces in string list
        options
   - Bugfix: Email address for bugs updated in "ChangeLog", "configure.ac",
        "NEWS"
   - Bugfix: Respect folding in mail header
   - Bugfix: Better handling of certain header lines
   - Bugfixes/Cleanup: Parsing of content type header field
   - Bugfix: Handling of quoted strings (IMAP4)
   - Feature: Support other encodings than "7bit" for all protocols